--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,177 @@
 aiohappyeyeballs==2.4.6
-aiohttp==3.11.12
+aiohttp==3.10.11
+aiohttp-retry==2.9.1
 aiosignal==1.3.2
-alembic==1.14.1
+amqp==5.3.1
 annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
 anyio==4.8.0
-appnope==0.1.4
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asttokens==3.0.0
-async-lru==2.0.4
-async-timeout==4.0.3
+appdirs==1.4.4
+asyncssh==2.20.0
+atpublic==5.1
 attrs==25.1.0
-babel==2.17.0
 beautifulsoup4==4.13.3
-bleach==6.2.0
+billiard==4.2.1
+cachetools==5.5.2
+celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
-comm==0.2.2
-dataclasses-json==0.6.7
-debugpy==1.8.12
-decorator==5.1.1
-defusedxml==0.7.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+colorama==0.4.6
+configobj==5.0.9
+cryptography==44.0.2
+decorator==5.2.1
+dictdiffer==0.9.0
+diskcache==5.6.3
 distro==1.9.0
-exceptiongroup==1.2.2
-executing==2.2.0
-fastapi==0.115.8
-fastjsonschema==2.21.1
+dotenv==0.9.9
+dpath==2.2.0
+dulwich==0.22.7
+dvc==3.59.1
+dvc-data==3.16.9
+dvc-gs==3.0.1
+dvc-http==2.32.0
+dvc-objects==5.1.0
+dvc-render==1.0.2
+dvc-studio-client==0.21.0
+dvc-task==0.40.2
+entrypoints==0.4
+fairlearn==0.12.0
 filelock==3.17.0
-fqdn==1.5.1
+flatten-dict==0.4.2
+flufl.lock==8.1.0
 frozenlist==1.5.0
 fsspec==2025.2.0
+funcy==2.0
+gcsfs==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-api-core==2.24.1
+google-auth==2.38.0
+google-auth-oauthlib==1.2.1
+google-cloud-core==2.4.2
+google-cloud-storage==3.1.0
+google-crc32c==1.6.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.67.0
+grandalf==0.8
+greenlet==3.1.1
+grpcio==1.70.0
+gto==1.7.2
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.29.1
+huggingface-hub==0.28.1
+hydra-core==1.3.2
 idna==3.10
-importlib_metadata==8.6.1
-ipykernel==6.29.5
-ipython==8.18.1
-isoduration==20.11.0
-jedi==0.19.2
+iniconfig==2.0.0
+iterative-telemetry==0.0.10
 Jinja2==3.1.5
 jiter==0.8.2
 joblib==1.4.2
-json5==0.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter-events==0.12.0
-jupyter-lsp==2.2.5
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyter_server==2.15.0
-jupyter_server_terminals==0.5.3
-jupyterlab==4.3.5
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.27.3
-langchain==0.3.19
-langchain-community==0.3.18
-langchain-core==0.3.37
+kombu==5.4.2
+langchain==0.3.18
+langchain-core==0.3.35
 langchain-huggingface==0.1.2
-langchain-openai==0.3.6
+langchain-pinecone==0.2.3
+langchain-tests==0.3.12
 langchain-text-splitters==0.3.6
-langgraph==0.2.73
-langgraph-checkpoint==2.0.15
-langgraph-sdk==0.1.51
 langsmith==0.3.8
-Mako==1.3.9
+lz4==4.4.3
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-marshmallow==3.26.1
-matplotlib-inline==0.1.7
-mistune==3.1.1
+mdurl==0.1.2
 mpmath==1.3.0
-msgpack==1.1.0
 multidict==6.1.0
-mypy-extensions==1.0.0
-nbclient==0.10.2
-nbconvert==7.16.6
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-notebook==7.3.2
-notebook_shim==0.2.4
+networkx==3.4.2
 numpy==1.26.4
-openai==1.63.2
+oauthlib==3.2.2
+omegaconf==2.3.0
+openai==1.63.0
 orjson==3.10.15
-overrides==7.7.0
 packaging==24.2
-pandocfilters==1.5.1
-parso==0.8.4
-pexpect==4.9.0
+pandas==2.2.3
+pathspec==0.12.1
 pillow==11.1.0
-pinecone==6.0.1
+pinecone==5.4.2
+pinecone-client==5.0.1
+pinecone-plugin-inference==1.1.0
 pinecone-plugin-interface==0.0.7
 platformdirs==4.3.6
-prometheus_client==0.21.1
+pluggy==1.5.0
 prompt_toolkit==3.0.50
-propcache==0.3.0
+propcache==0.2.1
+proto-plus==1.26.0
+protobuf==5.29.3
+protoc-gen-openapiv2==0.0.1
 psutil==7.0.0
-psycopg2-binary==2.9.10
-ptyprocess==0.7.0
-pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
-pydantic-settings==2.8.0
 pydantic_core==2.27.2
+pydot==3.0.4
+pygit2==1.17.0
 Pygments==2.19.1
+pygtrie==2.5.0
+pyparsing==3.2.1
+PyPDF2==3.0.1
+pytest==8.3.4
+pytest-asyncio==0.25.3
+pytest-socket==0.7.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-python-json-logger==3.2.1
+pytz==2025.1
+pywin32==308
 PyYAML==6.0.2
-pyzmq==26.2.1
-redis==5.2.1
-referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rpds-py==0.22.3
+rich==13.9.4
+rsa==4.9
+ruamel.yaml==0.18.10
+ruamel.yaml.clib==0.2.12
 safetensors==0.5.2
 scikit-learn==1.6.1
-scipy==1.13.1
-Send2Trash==1.8.3
+scipy==1.15.1
+scmrepo==3.3.10
+semver==3.0.4
 sentence-transformers==3.4.1
+setuptools==75.8.0
+shellingham==1.5.4
+shortuuid==1.0.13
+shtab==1.7.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.38
-stack-data==0.6.3
-starlette==0.45.3
+sqltrie==0.11.2
 sympy==1.13.1
+syrupy==4.8.1
+tabulate==0.9.0
 tenacity==9.0.0
-terminado==0.18.1
 threadpoolctl==3.5.0
 tiktoken==0.9.0
-tinycss2==1.4.0
 tokenizers==0.21.0
-tomli==2.2.1
+tomlkit==0.13.2
 torch==2.6.0
-tornado==6.4.2
 tqdm==4.67.1
-traitlets==5.14.3
-transformers==4.49.0
-types-python-dateutil==2.9.0.20241206
-typing-inspect==0.9.0
+transformers==4.48.3
+typer==0.15.2
 typing_extensions==4.12.2
-uri-template==1.3.0
+tzdata==2025.1
 urllib3==2.3.0
-uvicorn==0.34.0
+vine==5.1.0
+voluptuous==0.15.2
 wcwidth==0.2.13
-webcolors==24.11.1
-webencodings==0.5.1
-websocket-client==1.8.0
 yarl==1.18.3
-zipp==3.21.0
+zc.lockfile==3.0.post1
 zstandard==0.23.0
