--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohappyeyeballs==2.4.6
 aiohttp==3.10.11
 aiohttp-retry==2.9.1
 aiosignal==1.3.2
+altair==4.2.2
 amqp==5.3.1
 annotated-types==0.7.0
 antlr4-python3-runtime==4.9.3
@@ -10,6 +11,7 @@ appdirs==1.4.4
 asyncssh==2.20.0
 atpublic==5.1
 attrs==25.1.0
+backoff==2.2.1
 beautifulsoup4==4.13.3
 billiard==4.2.1
 cachetools==5.5.2
@@ -59,6 +61,7 @@ google-crc32c==1.6.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.67.0
 grandalf==0.8
+great-expectations==1.3.8
 greenlet==3.1.1
 grpcio==1.70.0
 gto==1.7.2
@@ -75,6 +78,8 @@ jiter==0.8.2
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 kombu==5.4.2
 langchain==0.3.18
 langchain-core==0.3.35
@@ -86,7 +91,10 @@ langsmith==0.3.8
 lz4==4.4.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+marshmallow==3.26.1
 mdurl==0.1.2
+mistune==3.1.2
+monotonic==1.6
 mpmath==1.3.0
 multidict==6.1.0
 networkx==3.4.2
@@ -96,7 +104,7 @@ omegaconf==2.3.0
 openai==1.63.0
 orjson==3.10.15
 packaging==24.2
-pandas==2.2.3
+pandas==2.1.4
 pathspec==0.12.1
 pillow==11.1.0
 pinecone==5.4.2
@@ -105,6 +113,7 @@ pinecone-plugin-inference==1.1.0
 pinecone-plugin-interface==0.0.7
 platformdirs==4.3.6
 pluggy==1.5.0
+posthog==3.18.0
 prompt_toolkit==3.0.50
 propcache==0.2.1
 proto-plus==1.26.0
@@ -130,11 +139,13 @@ python-dotenv==1.0.1
 pytz==2025.1
 pywin32==308
 PyYAML==6.0.2
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
 rich==13.9.4
+rpds-py==0.23.1
 rsa==4.9
 ruamel.yaml==0.18.10
 ruamel.yaml.clib==0.2.12
@@ -162,12 +173,14 @@ threadpoolctl==3.5.0
 tiktoken==0.9.0
 tokenizers==0.21.0
 tomlkit==0.13.2
+toolz==1.0.0
 torch==2.6.0
 tqdm==4.67.1
 transformers==4.48.3
 typer==0.15.2
 typing_extensions==4.12.2
 tzdata==2025.1
+tzlocal==5.3
 urllib3==2.3.0
 vine==5.1.0
 voluptuous==0.15.2
