--- a/requirements.txt
+++ b/requirements.txt
@@ -281,7 +281,7 @@ langchain>=0.1.0
 langchain-openai>=0.0.2
 langchain-community>=0.0.10
 langchain-core>=0.1.0
-openai>=1.0.0
+openai==0.28.0
 pinecone>=2.2.1  # Changed from pinecone-client to pinecone
 sentence-transformers>=2.2.2
 
