--- a/requirements.txt
+++ b/requirements.txt
@@ -15,24 +15,41 @@ attrs==25.1.0
 babel==2.17.0
 beautifulsoup4==4.13.3
 bleach==6.2.0
+blinker==1.9.0
+cachetools==5.5.2
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
+cloudpickle==3.1.1
 comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+databricks-sdk==0.47.0
 dataclasses-json==0.6.7
 debugpy==1.8.12
 decorator==5.1.1
 defusedxml==0.7.1
+Deprecated==1.2.18
 distro==1.9.0
+docker==7.1.0
 exceptiongroup==1.2.2
 executing==2.2.0
 fastapi==0.115.8
 fastjsonschema==2.21.1
 filelock==3.17.0
+Flask==3.1.0
+fonttools==4.56.0
 fqdn==1.5.1
 frozenlist==1.5.0
 fsspec==2025.2.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-auth==2.38.0
+graphene==3.4.3
+graphql-core==3.2.6
+graphql-relay==3.2.0
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.28.1
@@ -40,9 +57,12 @@ httpx-sse==0.4.0
 huggingface-hub==0.29.1
 idna==3.10
 importlib_metadata==8.6.1
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.18.1
+ipywidgets==8.1.5
 isoduration==20.11.0
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
 jiter==0.8.2
@@ -61,6 +81,8 @@ jupyter_server_terminals==0.5.3
 jupyterlab==4.3.5
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.7
 langchain==0.3.19
 langchain-community==0.3.18
 langchain-core==0.3.37
@@ -72,10 +94,14 @@ langgraph-checkpoint==2.0.15
 langgraph-sdk==0.1.51
 langsmith==0.3.8
 Mako==1.3.9
+Markdown==3.7
 MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.1
+mlflow==2.21.0
+mlflow-skinny==2.21.0
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
@@ -89,9 +115,13 @@ notebook==7.3.2
 notebook_shim==0.2.4
 numpy==1.26.4
 openai==1.63.2
+opentelemetry-api==1.31.1
+opentelemetry-sdk==1.31.1
+opentelemetry-semantic-conventions==0.52b1
 orjson==3.10.15
 overrides==7.7.0
 packaging==24.2
+pandas==2.2.3
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -102,18 +132,24 @@ platformdirs==4.3.6
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 propcache==0.3.0
+protobuf==5.29.4
 psutil==7.0.0
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
 pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
 Pygments==2.19.1
+pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-json-logger==3.2.1
+pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.1
 redis==5.2.1
@@ -124,15 +160,18 @@ requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.22.3
+rsa==4.9
 safetensors==0.5.2
 scikit-learn==1.6.1
 scipy==1.13.1
 Send2Trash==1.8.3
 sentence-transformers==3.4.1
 six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.38
+sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.45.3
 sympy==1.13.1
@@ -151,6 +190,7 @@ transformers==4.49.0
 types-python-dateutil==2.9.0.20241206
 typing-inspect==0.9.0
 typing_extensions==4.12.2
+tzdata==2025.1
 uri-template==1.3.0
 urllib3==2.3.0
 uvicorn==0.34.0
@@ -158,6 +198,9 @@ wcwidth==0.2.13
 webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
+Werkzeug==3.1.3
+widgetsnbextension==4.0.13
+wrapt==1.17.2
 yarl==1.18.3
 zipp==3.21.0
 zstandard==0.23.0
