--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,10 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = driver://user:pass@localhost/dbname
+#sqlalchemy.url = driver://admin:admin@localhost/
+#sqlalchemy.url = postgresql+psycopg2://admin:admin@localhost:5432/chatbot_db
+sqlalchemy.url = postgresql://admin:admin@localhost:5432/chatbot_db
+
 
 
 [post_write_hooks]
