--- a/src/chatbot/alembic.ini
+++ b/src/chatbot/alembic.ini
@@ -64,8 +64,8 @@ version_path_separator = os
 # output_encoding = utf-8
 
 
-#sqlalchemy.url = postgresql://pranav:chatbot_db@localhost:5432/chatbot_db
-sqlalchemy.url = ${SQLALCHEMY_URL}
+sqlalchemy.url = postgresql://admin:admin@localhost:5432/chatbot_db
+#sqlalchemy.url = ${SQLALCHEMY_URL}
 
 
 [post_write_hooks]
