--- a/requirements.txt
+++ b/requirements.txt
@@ -152,6 +152,7 @@ python-json-logger==3.2.1
 pytz==2025.1
 PyYAML==6.0.2
 pyzmq==26.2.1
+RapidFuzz==3.12.2
 redis==5.2.1
 referencing==0.36.2
 regex==2024.11.6
