--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,8 @@
-# Core dependencies
-python-dotenv
-langchain
-langchain-openai
-langchain-community
-langchain-core
-openai
-pinecone # Changed from pinecone-client to pinecone
-sentence-transformers
-
-# Data processing
-numpy
-pandas
-
-# For Graph RAG
-networkx
-pyvis
-
-# For evaluation
-scikit-learn
-matplotlib
-tqdm
-
-# Utilities
-pydantic
-colorlog
 aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aiosignal==1.3.2
 alembic==1.14.1
+altair==5.5.0
 annotated-types==0.7.0
 anyio==4.8.0
 appnope==0.1.4
@@ -126,12 +101,13 @@ marshmallow==3.26.1
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.1
-mlflow==2.21.0
-mlflow-skinny==2.21.0
+mlflow==2.21.3
+mlflow-skinny==2.21.3
 mpmath==1.3.0
 msgpack==1.1.0
 multidict==6.1.0
 mypy-extensions==1.0.0
+narwhals==1.34.1
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -170,6 +146,7 @@ pycparser==2.22
 pydantic==2.10.6
 pydantic-settings==2.8.0
 pydantic_core==2.27.2
+pydeck==0.9.1
 Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
@@ -201,6 +178,7 @@ SQLAlchemy==2.0.38
 sqlparse==0.5.3
 stack-data==0.6.3
 starlette==0.45.3
+streamlit==1.44.1
 sympy==1.13.1
 tenacity==9.0.0
 terminado==0.18.1
@@ -208,6 +186,7 @@ threadpoolctl==3.5.0
 tiktoken==0.9.0
 tinycss2==1.4.0
 tokenizers==0.21.0
+toml==0.10.2
 tomli==2.2.1
 torch==2.6.0
 tornado==6.4.2
