--- a/requirements.txt
+++ b/requirements.txt
@@ -91,7 +91,8 @@ langchain-huggingface==0.1.2
 langchain-openai==0.3.6
 langchain-text-splitters==0.3.6
 langgraph==0.2.73
-langgraph-checkpoint==2.0.15
+langgraph-checkpoint==2.0.24
+langgraph-checkpoint-postgres==2.0.19
 langgraph-sdk==0.1.51
 langsmith==0.3.8
 Mako==1.3.9
@@ -121,6 +122,7 @@ opentelemetry-api==1.31.1
 opentelemetry-sdk==1.31.1
 opentelemetry-semantic-conventions==0.52b1
 orjson==3.10.15
+ormsgpack==1.9.1
 overrides==7.7.0
 packaging==24.2
 pandas==2.2.3
@@ -136,6 +138,8 @@ prompt_toolkit==3.0.50
 propcache==0.3.0
 protobuf==5.29.4
 psutil==7.0.0
+psycopg==3.2.6
+psycopg-pool==3.2.6
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
