--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ databricks-sdk==0.47.0
 dataclasses-json==0.6.7
 debugpy==1.8.12
 decorator==5.1.1
+deepseek
 defusedxml==0.7.1
 Deprecated==1.2.18
 distro==1.9.0
@@ -116,7 +117,7 @@ nest-asyncio==1.6.0
 networkx==3.2.1
 notebook==7.3.2
 notebook_shim==0.2.4
-numpy==1.26.4
+numpy
 openai==1.63.2
 opentelemetry-api==1.31.1
 opentelemetry-sdk==1.31.1
@@ -125,7 +126,7 @@ orjson==3.10.15
 ormsgpack==1.9.1
 overrides==7.7.0
 packaging==24.2
-pandas==2.2.3
+pandas
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -170,8 +171,8 @@ rfc3986-validator==0.1.1
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.13.1
+scikit-learn
+scipy
 Send2Trash==1.8.3
 sentence-transformers==3.4.1
 six==1.17.0
