--- a/src/chatbot/alembic.ini
+++ b/src/chatbot/alembic.ini
@@ -63,9 +63,8 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-
-# sqlalchemy.url = postgresql://pranav:chatbot_db@localhost:5432/chatbot_db
-sqlalchemy.url = ${SQLALCHEMY_URL}
+#sqlalchemy.url = driver://user:pass@localhost/dbname
+sqlalchemy.url = postgresql://pranav:chatbot_db@localhost:5432/chatbot_db
 
 
 [post_write_hooks]
