alembic and gitignore

--- a/src/chatbot/alembic.ini
+++ b/src/chatbot/alembic.ini
@@ -64,7 +64,7 @@ version_path_separator = os
 # output_encoding = utf-8
 
 #sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = postgresql://pranav:chatbot_db@localhost:5432/chatbot_db
+sqlalchemy.url = postgresql://postgres:postgres123@postgres:5432/chatbot_db
 
 
 [post_write_hooks]
