--- a/requirements.txt
+++ b/requirements.txt
@@ -94,13 +94,15 @@ langgraph==0.2.73
 langgraph-checkpoint==2.0.24
 langgraph-checkpoint-postgres==2.0.19
 langgraph-sdk==0.1.51
-langsmith==0.3.8
+langsmith==0.3.31
 Mako==1.3.9
 Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 mistune==3.1.1
 mlflow==2.21.3
 mlflow-skinny==2.21.3
@@ -118,6 +120,7 @@ notebook==7.3.2
 notebook_shim==0.2.4
 numpy==1.26.4
 openai==1.63.2
+openevals==0.0.18
 opentelemetry-api==1.31.1
 opentelemetry-sdk==1.31.1
 opentelemetry-semantic-conventions==0.52b1
@@ -167,6 +170,7 @@ requests==2.32.3
 requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
+rich==14.0.0
 rpds-py==0.22.3
 rsa==4.9
 safetensors==0.5.2
