--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,7 +94,7 @@ x-airflow-common:
     - ${AIRFLOW_PROJ_DIR:-.}/.env:/opt/airflow/.env # Mount .env to standard location
   # --- END MODIFIED VOLUMES SECTION ---
 
-  user: "${AIRFLOW_UID:-50000}:0"
+  #user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
     redis:
