--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -31,4 +31,4 @@ jobs:
 
       - name: Run tests
         run: |
-          pytest tests/  # Or `python -m unittest discover tests`
+          PYTHONPATH= . pytest tests/  # Or `python -m unittest discover tests`
